@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.azure</groupId>
     <artifactId>azure-client-sdk-parent</artifactId>
-    <version>1.4.0</version>
+    <version>1.6.0</version> <!-- {x-version-update;com.azure:azure-client-sdk-parent;current} -->
     <relativePath>../../../pom.client.xml</relativePath>
   </parent>
 
@@ -13,7 +13,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-storage-file</artifactId>
-  <version>12.0.0-preview.4</version>
+  <version>12.0.0-preview.5</version> <!-- {x-version-update;com.azure:azure-storage-file;current} -->
 
   <name>Microsoft Azure client library for File Storage</name>
   <description>This module contains client library for Microsoft Azure File Storage.</description>
@@ -40,12 +40,12 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.0.0-preview.5</version>
+      <version>1.0.0-preview.7</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-storage-common</artifactId>
-      <version>12.0.0-preview.4</version>
+      <version>12.0.0-preview.5</version> <!-- {x-version-update;com.azure:azure-storage-common;current} -->
     </dependency>
 
     <!-- Added this dependency to include necessary annotations used by reactor core.
@@ -61,13 +61,13 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-test</artifactId>
-      <version>1.0.0-preview.5</version>
+      <version>1.0.0-preview.7</version> <!-- {x-version-update;com.azure:azure-core-test;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-http-netty</artifactId>
-      <version>1.0.0-preview.5</version>
+      <version>1.0.0-preview.7</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -96,13 +96,25 @@
       <build>
         <plugins>
           <plugin>
-            <!-- Skip maven compiler and use gmavenplus plugin instead -->
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
+            <version>${maven-compiler-plugin.version}</version>
             <configuration>
               <source>1.8</source>
               <target>1.8</target>
+              <showWarnings>true</showWarnings>
+              <failOnWarning>true</failOnWarning>
+              <compilerArgs>
+                <arg>-Xlint:all</arg>
+                <arg>-Xlint:-serial</arg>
+                <arg>-Xlint:-deprecation</arg>
+                <arg>-Xlint:-processing</arg>
+              </compilerArgs>
+              <excludes>
+                <exclude>module-info.java</exclude>
+              </excludes>
             </configuration>
+
             <executions>
               <execution>
                 <id>test-compile</id>
@@ -112,7 +124,6 @@
                 </goals>
                 <configuration>
                   <compilerId>groovy-eclipse-compiler</compilerId>
-                  <compilerArgument>-Xlint:unchecked</compilerArgument>
                 </configuration>
               </execution>
               <execution>
@@ -123,7 +134,6 @@
                 </goals>
                 <configuration>
                   <compilerId>groovy-eclipse-compiler</compilerId>
-                  <compilerArgument>-Xlint:unchecked</compilerArgument>
                 </configuration>
               </execution>
             </executions>
@@ -140,7 +150,6 @@
               </dependency>
             </dependencies>
           </plugin>
-
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
@@ -174,7 +183,6 @@
                 </goals>
                 <configuration>
                   <compilerId>groovy-eclipse-compiler</compilerId>
-                  <compilerArgument>-Xlint:unchecked</compilerArgument>
                   <release>8</release>
                 </configuration>
               </execution>
@@ -186,7 +194,6 @@
                 </goals>
                 <configuration>
                   <compilerId>groovy-eclipse-compiler</compilerId>
-                  <compilerArgument>-Xlint:unchecked</compilerArgument>
                   <release>8</release>
                 </configuration>
               </execution>
@@ -214,6 +221,7 @@
                 --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
                 --add-exports com.azure.core/com.azure.core.implementation.serializer.jackson=ALL-UNNAMED
                 --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
+                --add-opens com.azure.storage.common/com.azure.storage.common.implementation=ALL-UNNAMED
                 --add-opens com.azure.storage.file/com.azure.storage.file=ALL-UNNAMED
                 --add-opens com.azure.storage.file/com.azure.storage.file.implementation=ALL-UNNAMED
                 --add-opens com.azure.storage.file/com.azure.storage.file.models=ALL-UNNAMED
